# scripts

./: .gitignore  HomeForm.ui.qml  LICENSE  Launcher.qml  Page1Form.ui.qml  Page2Form.ui.qml  README.md  all.pyw  dice.sh  npc.sh  pyproject.toml  qml.qrc  rand.sh  requirements.txt  rline.sh  rstats.sh  scripts.pyw  scripts.qbs  serial.py  setup.cfg  setup.py  shutdown_listener.py  shutdown_listener.service  tst_send.py  win.py
.spyproject/config/backups/: workspace.ini.bak
assets/: abilities.txt  appearances.txt  flaws.txt  ideals.txt  law_chaos.txt  mannerisms.txt  neutral_other.txt  talents.txt
etc/udev/rules.d/: 90-input.rules
pi/: analog.py  pigpiod.service  shutdown_listener.py  shutdown_listener_GPIO.py
scripts/: __init__.py  auto.py
src/: all.pyw
src/newpsoft/: __init__.py  auto.py
