[metadata]
name = newpsoft
version = 0.0.1
author = New Paradigm Software
author_email = newparadigmsoftware@gmail.com
description = Some helper scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/funmungus/scripts
project_urls =
    Bug Tracker = https://github.com/funmungus/scripts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
